# SpaceTime

./: CMakeLists.txt  alice_ring_schematic.py  bn_skyrmion.py  ferro_skyrmion.py  integrate_dens.py  un_monopole.py
GrossPitaevskii/: GPBlocks.cpp
GrossPitaevskiiGpuA15/: GPUGrossPitaevskii_A15.cu  mesh.h
GrossPitaevskiiGpuBcc/: GPUGrossPitaevskii_BCC.cu  VortexState.cpp  mesh.h
GrossPitaevskiiGpuC15/: GPUGrossPitaevskii_C15.cu  mesh.h
GrossPitaevskiiGpuCube/: GPUGrossPitaevskii_Cube.cu  mesh.h
GrossPitaevskiiGpuFcc/: GPUGrossPitaevskii_C15.cu  GPUGrossPitaevskii_FCC.cu  mesh.h
GrossPitaevskiiGpuZ/: GPUGrossPitaevskii_Z.cu  mesh.h
ImageFlipper/: CMakeLists.txt  ImageFlipper.cpp
Output/: Picture.hpp
RelativisticGpeBCC/: CMakeLists.txt  RelativisticGpeBCC.cu  mesh.h  mesh2.h
RelativisticGpeC15/: CMakeLists.txt  mesh.h
RelativisticGpeCube/: CMakeLists.txt  RelativisticGpeCube.cu  mesh.h
RelativisticSpin1Gpe/: AliceRingRamps.h  CMakeLists.txt  KnotRamps.h  RelativisticSpin1Gpe.cu  VortexState.hpp  common_kernels.h  helper_cuda.h  hyper_kernels.h  mesh.h  para_kernels.h  utils.h
RelativisticSpin2Gpe/: AliceRingRamps.h  CMakeLists.txt  KnotRamps.h  RelativisticSpin2Gpe.cu  VortexState.cpp  utils.h
Spin1GpeBCC/: AliceRingRamps.h  CMakeLists.txt  KnotRamps.h  Spin1GpeBCC.cu  VortexState.cpp  VortexState.hpp  mesh.h  mesh2.h  utils.h
Spin1GpeCube/: AliceRingRamps.h  CMakeLists.txt  Spin1GpeCube.cu  VortexState.cpp  conf_alice_ring.json  helper_string.h  magnetizations.txt  mesh.h  utils.h
Spin2GpeBCC/: AliceRingRamps.h  CMakeLists.txt  KnotRamps.h  Spin2GpeBCC.cu  utils.h
Types/: MpiEasy.hpp  Types.hpp
